# evomerge-framework

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  EXAMPLES.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: api-issue.yml  config.yml  documentation.yml  endorsement.yml  numeric-mismatch.yml
.github/workflows/: ci.yml
data/router/: router_gbdt.joblib  router_records.jsonl  training_report.json
docs/: ecosystem-map.md
evomerge/: __init__.py  __main__.py  dataset_card.py  export.py  io.py  provenance.py
evomerge/benchmarks/: bfcl.py  mcp_atlas.py
evomerge/eval/: __init__.py  harness.py  metrics.py  stat_bridge.py
evomerge/pipeline/: __init__.py  cascade.py  compliance_dpo.py  compliance_sft.py  dpo.py  ppo.py  sft.py
evomerge/rl/: export.py
evomerge/router/: labels.py  (+3 more)
examples/: recipe11_rollout_to_sft.py  recipe16_full_loop_demo.py
fixtures/: fixtures.lock.json
schemas/: compliance-eval-record.schema.json
scripts/: check-schema-parity.py  eval_group_ac.py  generate_synthetic_data.py  generate_synthetic_data_fast.py  merge_training_data_v2.py  sync-wasmagent-schemas.py  train_dpo.py  train_router.py  train_router_prerun.py  train_sft.py  verify-fixtures-lock.py
tests/: test_cli.py  test_compliance_dpo_cascade.py  test_cross_mode_dpo.py  test_eval.py  test_generator.py  test_mcp_security.py  test_pipeline.py  test_provenance.py  test_quality_gate.py  test_rl_export.py  test_router.py  test_router_export.py  test_schemas.py  test_schemas_json.py  test_stat_bridge.py  test_templates.py  test_trace_card.py  test_validate.py
(+22 files in other folders)
