[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evomerge"
version = "0.2.0"
description = "WasmAgent trace-to-training pipeline and LLM benchmark audit toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "telleroutlook" }]
keywords = [
    "llm", "evaluation", "audit", "mcnemar", "conformal", "reproducibility",
    "sft", "dpo", "ppo", "rlhf", "wasmagent", "compliance", "training-data",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.26",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5", "scipy>=1.11", "sympy>=1.12"]

[project.urls]
Homepage = "https://github.com/telleroutlook/evomerge-framework"
Paper = "https://github.com/telleroutlook/evomerge-framework/blob/main/papers/eval_trust/draft.pdf"

[tool.setuptools.packages.find]
include = ["eval_trust*", "evomerge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
